--- a/travelApp/View/Base.lproj/Main.storyboard
+++ b/travelApp/View/Base.lproj/Main.storyboard
@@ -358,7 +358,7 @@
                                                 </constraints>
                                             </stackView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="pgZ-Ck-M0t">
-                                                <rect key="frame" x="0.0" y="168.5" width="74" height="74"/>
+                                                <rect key="frame" x="0.0" y="168.5" width="74" height="74.000000000000028"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="pgZ-Ck-M0t" secondAttribute="height" multiplier="1:1" id="Sdw-hX-wmh"/>
@@ -396,8 +396,8 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="ETQ-eN-Sur">
                                         <rect key="frame" x="0.0" y="332.5" width="334" height="326.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forecast of your chosen location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ii-P4-63m">
-                                                <rect key="frame" x="84" y="0.0" width="250" height="77"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forecast of your chosen location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ii-P4-63m">
+                                                <rect key="frame" x="0.0" y="0.0" width="334" height="77"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -428,7 +428,7 @@
                                                 </constraints>
                                             </stackView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="3Ed-iP-vRs">
-                                                <rect key="frame" x="257" y="166.5" width="77" height="77"/>
+                                                <rect key="frame" x="257" y="166.5" width="77" height="77.000000000000028"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="3Ed-iP-vRs" secondAttribute="height" multiplier="1:1" id="myk-gP-1Zj"/>
@@ -459,8 +459,10 @@
                                             </stackView>
                                         </subviews>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="3Ii-P4-63m" secondAttribute="trailing" id="DkJ-UQ-yQS"/>
                                             <constraint firstItem="xtd-O8-5Aq" firstAttribute="leading" secondItem="ETQ-eN-Sur" secondAttribute="leading" id="KVJ-KG-lQi"/>
                                             <constraint firstAttribute="trailing" secondItem="xtd-O8-5Aq" secondAttribute="trailing" id="mbR-1A-cNb"/>
+                                            <constraint firstItem="3Ii-P4-63m" firstAttribute="leading" secondItem="ETQ-eN-Sur" secondAttribute="leading" id="tWO-LK-oTI"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
