--- a/travelApp/View/Base.lproj/Main.storyboard
+++ b/travelApp/View/Base.lproj/Main.storyboard
@@ -319,17 +319,27 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D5y-8Y-7cn">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
-                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Sx3-oW-TNl">
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Sx3-oW-TNl">
                                         <rect key="frame" x="177" y="332.5" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Sx3-oW-TNl" secondAttribute="height" multiplier="1:1" id="Efq-wn-dl1"/>
                                             <constraint firstAttribute="height" constant="60" id="wzy-Vq-bbT"/>
                                         </constraints>
+                                        <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </activityIndicatorView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4J-K2-81G">
+                                        <rect key="frame" x="20" y="378.5" width="374" height="24"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.77492465099999996" green="0.77492465099999996" blue="0.77492465099999996" alpha="0.30527611300000002" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="Sx3-oW-TNl" firstAttribute="centerX" secondItem="D5y-8Y-7cn" secondAttribute="centerX" id="4AJ-Rc-DFB"/>
+                                    <constraint firstAttribute="trailing" secondItem="v4J-K2-81G" secondAttribute="trailing" constant="20" symbolic="YES" id="Azu-B1-fa4"/>
+                                    <constraint firstItem="v4J-K2-81G" firstAttribute="bottom" secondItem="Sx3-oW-TNl" secondAttribute="bottom" constant="10" id="eNV-ck-e4u"/>
+                                    <constraint firstItem="v4J-K2-81G" firstAttribute="leading" secondItem="D5y-8Y-7cn" secondAttribute="leading" constant="20" symbolic="YES" id="h9r-vM-AeP"/>
                                     <constraint firstItem="Sx3-oW-TNl" firstAttribute="centerY" secondItem="D5y-8Y-7cn" secondAttribute="centerY" id="yBk-Nb-DPp"/>
                                 </constraints>
                             </view>
@@ -402,13 +412,13 @@
                                                 <rect key="frame" x="0.0" y="154.5" width="354" height="154"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="PoA-ru-MkM">
-                                                        <rect key="frame" x="0.0" y="0.0" width="154.5" height="154"/>
+                                                        <rect key="frame" x="0.0" y="3.5" width="147" height="147.00000000000003"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="PoA-ru-MkM" secondAttribute="height" multiplier="1:1" id="ejJ-3j-ocD"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3h-PU-3Vw">
-                                                        <rect key="frame" x="176.5" y="41" width="102.5" height="72"/>
+                                                        <rect key="frame" x="173" y="41" width="102.5" height="72"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="60"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -453,13 +463,13 @@
                                                 <rect key="frame" x="0.0" y="154.5" width="354" height="154"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" translatesAutoresizingMaskIntoConstraints="NO" id="6t2-LT-AaT">
-                                                        <rect key="frame" x="0.0" y="0.0" width="154.5" height="154"/>
+                                                        <rect key="frame" x="0.0" y="3.5" width="147" height="147.00000000000003"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="6t2-LT-AaT" secondAttribute="height" multiplier="1:1" id="Qle-9g-4LL"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6M-Vt-odi">
-                                                        <rect key="frame" x="176.5" y="41" width="102.5" height="72"/>
+                                                        <rect key="frame" x="173" y="41" width="102.5" height="72"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="60"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
