--- a/travelApp/View/Base.lproj/Main.storyboard
+++ b/travelApp/View/Base.lproj/Main.storyboard
@@ -570,21 +570,9 @@
                                         </connections>
                                     </button>
                                     <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="search for a city..." translatesAutoresizingMaskIntoConstraints="NO" id="3Gj-gu-k1c">
-                                        <rect key="frame" x="30" y="0.0" width="314" height="50"/>
+                                        <rect key="frame" x="30" y="0.0" width="344" height="50"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                     </searchBar>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0F-mI-bEG">
-                                        <rect key="frame" x="344" y="10" width="30" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="e0F-mI-bEG" secondAttribute="height" multiplier="1:1" id="Wxt-rN-uq8"/>
-                                            <constraint firstAttribute="height" constant="30" id="kPv-pr-HCv"/>
-                                        </constraints>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" backgroundImage="search.icon"/>
-                                        <connections>
-                                            <action selector="searchPressed:" destination="3Wx-jJ-Olk" eventType="touchUpInside" id="YHj-B6-bxB"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="27R-ji-CZv"/>
@@ -697,6 +685,25 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZ0-eO-GXq">
+                                <rect key="frame" x="20" y="156" width="354" height="308.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVf-vK-YhV">
+                                        <rect key="frame" x="20" y="40" width="314" height="228.5"/>
+                                        <string key="text">Tap on the button on the top left corner to get your current position forecast. Or search for a specific city by using the search bar. You can set your registerd location in settings.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="GVf-vK-YhV" secondAttribute="bottom" constant="40" id="4XQ-Fc-4fh"/>
+                                    <constraint firstItem="GVf-vK-YhV" firstAttribute="leading" secondItem="UZ0-eO-GXq" secondAttribute="leading" constant="20" id="pyE-sR-GAe"/>
+                                    <constraint firstAttribute="trailing" secondItem="GVf-vK-YhV" secondAttribute="trailing" constant="20" id="rPd-rb-6DO"/>
+                                    <constraint firstItem="GVf-vK-YhV" firstAttribute="top" secondItem="UZ0-eO-GXq" secondAttribute="top" constant="40" id="snN-ld-qkB"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -706,12 +713,17 @@
                             <constraint firstItem="Zwx-TW-wRc" firstAttribute="top" secondItem="TIM-bi-uCn" secondAttribute="bottom" constant="8" symbolic="YES" id="GhZ-Hr-6Fm"/>
                             <constraint firstItem="HE9-rP-rUH" firstAttribute="trailing" secondItem="TIM-bi-uCn" secondAttribute="trailing" constant="20" id="L0a-r5-NUq"/>
                             <constraint firstItem="HE9-rP-rUH" firstAttribute="trailing" secondItem="Zwx-TW-wRc" secondAttribute="trailing" constant="40" id="PN1-Gi-Iuy"/>
+                            <constraint firstItem="UZ0-eO-GXq" firstAttribute="trailing" secondItem="Ob5-9F-LWz" secondAttribute="trailing" id="QT0-u6-HMi"/>
+                            <constraint firstItem="UZ0-eO-GXq" firstAttribute="bottom" secondItem="Ob5-9F-LWz" secondAttribute="bottom" id="Wql-p5-oo7"/>
                             <constraint firstItem="Zwx-TW-wRc" firstAttribute="leading" secondItem="HE9-rP-rUH" secondAttribute="leading" constant="20" id="pfJ-5x-Z6J"/>
+                            <constraint firstItem="UZ0-eO-GXq" firstAttribute="top" secondItem="Ob5-9F-LWz" secondAttribute="top" id="uzx-vN-MPD"/>
+                            <constraint firstItem="UZ0-eO-GXq" firstAttribute="leading" secondItem="Ob5-9F-LWz" secondAttribute="leading" id="vUw-te-08M"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HE9-rP-rUH"/>
                     </view>
                     <navigationItem key="navigationItem" title="Weather" id="Ow7-fc-jtU"/>
                     <connections>
+                        <outlet property="overlay" destination="UZ0-eO-GXq" id="MWY-9A-dwQ"/>
                         <outlet property="searchBar" destination="3Gj-gu-k1c" id="NA3-6f-6gf"/>
                         <outletCollection property="cityLabels" destination="jvl-0f-u0p" collectionClass="NSMutableArray" id="flx-t3-0xp"/>
                         <outletCollection property="cityLabels" destination="ElK-yb-cDP" collectionClass="NSMutableArray" id="PZP-Ed-YRd"/>
